UserRegister: -form ui update -shows a success message -redirects after successful registration User Login: -form ui update -shows a success message -redirects after successful registration - when user is logged in the his auth data is saved - UserStore.js automaticity gets auth data if user is saved

--- a/source/client/styles/main.less
+++ b/source/client/styles/main.less
@@ -1,50 +1,13 @@
 @import '../../../bower_components/bootstrap/less/bootstrap';
+@import (less) "../../../node_modules/bootswatch/lumen/variables.less";
+@import (less) "../../../node_modules/bootswatch/lumen/bootswatch.less";
 @import '../../../bower_components/toastr/toastr';
 @import (less) '../../../bower_components/magnific-popup/dist/magnific-popup.css';
 
-/*
- * Bootstrap overrides.
- */
-@body-bg: #f0f3f4;
-@text-color: #58666f;
-@font-family-base: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-@link-color: #363f34;
-@link-hover-color: #141718;
+/* bootstrap rewrite */
 
-@navbar-default-bg: #fff;
-@navbar-default-link-color: #353f44;
-@navbar-default-link-hover-bg: #f6f7f7;
-@navbar-default-link-active-bg: #f6f7f7;
 
-@btn-default-color: #58666e;
-@btn-default-border: #dee5e7;
-
-@btn-primary-color: #fff;
-@btn-primary-bg: #7266bb;
-@btn-primary-border: #7266bb;
-
-@btn-success-color: #fff;
-@btn-success-bg: #27d24b;
-@btn-success-border: #27d24b;
-
-@btn-info-color: #fff;
-@btn-info-bg: #23b7f5;
-@btn-info-border: #23b7f5;
-
-@btn-warning-color: #fff;
-@btn-warning-bg: #fac732;
-@btn-warning-border: #fac732;
-
-@btn-danger-color: #fff;
-@btn-danger-bg: #f15051;
-@btn-danger-border: #f15051;
-
-@panel-default-border: #dee5e7;
-@panel-border-radius: 2px;
-@panel-default-heading-bg: #f6f8f8;
-
-@screen-sm: 800px;
-
+/* Main style */
 html {
   position: relative;
   min-height: 100%;
@@ -880,4 +843,30 @@ label {
 .has-error .help-block,
 .has-success .help-block {
   display: inherit;
+}
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-200px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fadeInDown {
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
 }
