--- a/source/client/styles/main.less
+++ b/source/client/styles/main.less
@@ -870,3 +870,14 @@ label {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
 }
+
+.single-article {
+  width: 30%;
+  display: inline-block;
+  padding: 1%;
+  vertical-align: top;
+}
+
+.single-article img {
+  max-width: 100%;
+}
