fixed footer top text

--- a/source/client/styles/main.less
+++ b/source/client/styles/main.less
@@ -25,7 +25,9 @@ footer {
   color: #fff;
   background-color: #3b3f51;
 }
-
+footer p.lead{
+  color: #fff; 
+}
 footer a {
   color: #fff;
   text-decoration: underline;
