--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8578,3 +8578,12 @@ label {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
 }
+.single-article {
+  width: 30%;
+  display: inline-block;
+  padding: 1%;
+  vertical-align: top;
+}
+.single-article img {
+  max-width: 100%;
+}
