some last changes

--- a/source/client/styles/main.less
+++ b/source/client/styles/main.less
@@ -454,7 +454,16 @@ footer .thumb-md {
 label {
   font-weight: normal;
 }
+.media-container {
 
+}
+.media-object {
+  margin-left: 50%;
+  transform: translateX(-50%);
+  max-height: 400px;
+  border: 3px solid black;
+  box-shadow: 0 0 10px black;
+}
 .profile-img {
   position: relative;
   margin-bottom: 20px;
