--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8078,6 +8078,14 @@ footer .thumb-md:hover {
 label {
   font-weight: normal;
 }
+.media-object {
+  margin-left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  max-height: 400px;
+  border: 3px solid black;
+  box-shadow: 0 0 10px black;
+}
 .profile-img {
   position: relative;
   margin-bottom: 20px;
